# LayerOn

./: .gitignore  AGENTS.md  design_guide.html  migrate.sql  package-lock.json  package.json  pyproject.toml  vite-plugin-meta-images.ts  vite.config.ts
Backend/: celery_app.py  config.py  database.py  main.py
Backend/models/: __init__.py  conversation.py  creator_kb.py  document.py  module.py  user.py
Backend/routers/: __init__.py  auth.py  billing.py  chat.py  conversations.py  creator_kb.py  creators.py  documents.py  favorites.py  health.py  modules.py  notifications.py
Backend/schemas/: __init__.py  billing.py  chat.py  conversation.py  creator_kb.py  module.py  user.py
Backend/scrapers/: __init__.py  _html.py  base.py  medium.py  rss.py  substack.py  youtube.py
Backend/tasks/: __init__.py  creator_sync.py  maintenance.py
Backend/utils/: auth.py  creator_kb.py  documents.py  embeddings.py  llm.py  serializers.py  stripe_client.py  web_identity.py
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/layer/: AuthShell.tsx  LayerFooter.tsx  (+3 more)
client/src/hooks/: use-clerk-auth.ts
client/src/lib/: api.ts
client/src/pages/: about.tsx  billing.tsx  blog-post.tsx  blog.tsx  chat.tsx  create-module.tsx  creator-profile.tsx  dashboard.tsx  explore.tsx  history.tsx  home.tsx  knowledge-base.tsx  library.tsx  module-detail.tsx  not-found.tsx  notifications.tsx  onboarding.tsx  pricing.tsx  profile.tsx  sign-in.tsx  sign-out.tsx  sign-up.tsx  stats.tsx  studio.tsx
scripts/: seed_stripe_products.py
shared/: schema.ts
