[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "numpy>=2.0.0",
    "openai>=1.51.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pypdf>=6.7.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
    "stripe>=14.4.1",
    "uvicorn[standard]>=0.40.0",
    "youtube-transcript-api>=0.6.2",
]
